syntax = "proto3";

package spine.test.model.filter;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.model.filter";
option java_outer_classname = "ProjectProto";
option java_multiple_files = true;

message ModProjectTasks {
    option (entity).kind = PROJECTION;

    string project_id = 1;

    repeated string task_title = 2;
}

message ModProject {
    option (entity).kind = AGGREGATE;

    string project_id = 1;
}
